<resources>
    <string name="app_name">P4K DEV</string>
    <string name="title_activity_login">P4K DEV
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nama Pengguna</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="identitas_ibu">Identitas Ibu</string>
    <string name="detail_ibu">Detail Ibu</string>
    <string name="transportasi">Transportasi</string>
    <string name="bankdarah">Bank Darah</string>
    <string name="mother_names">Nama Ibu :</string>
    <string name="husband_name">Nama Suami</string>
    <string name="gubug">RT/Gubug</string>
    <string name="hpht">HPHT</string>
    <string name="htp">HTP</string>
    <string name="gol_darah">Golongan Darah</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="status">Status</string>
    <string name="Hidup">Hidup</string>
    <string name="hamil">Hamil</string>
    <string name="nifas">Nifas</string>
    <string name="risti">Risti</string>
    <string name="kader">Nama Kader</string>
    <string name="notelp">Nomor Telpon Kader</string>
    <string name="meinggal">Meninggal</string>
    <string name="nama_donor">Nama Donor</string>
    <string name="suami">Suami</string>
    <string name="nenek">Nenek</string>
    <string name="kakek">kakek</string>
    <string name="adik">Adik</string>
    <string name="lainnya">Lainnya</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="jenis_kenda">Jenis Kendaraan</string>
    <string name="posyandu">Posyandu</string>
    <string name="Dusun">Dusun</string>
    <string name="profesi_tesxt">Profesi</string>
    <string name="Kete">Keterangan</string>
    <string name="Mobil">Mobil</string>
    <string name="motor">Motor</string>
    <string name="kapasitass">Kapasitas Kendaraan</string>
    <string name="dusun">Dusun</string>
    <string name="cidomo">Cidomo</string>
    <string name="rhesus">Rhesus</string>
    <string name="pickup">Mobil pick-up</string>
    <string name="nohp">No Hp</string>
    <string name="statusbersalin">Apakah Ibu Telah Bersalin</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="persalinan">Tanggal Persalinan</string>
    <string name="kondisiibu">Kondisi Ibu</string>
    <string name="meninggal">Meninggal</string>
    <string name="kondisianak">Kondisi Anak</string>
    <string name="nifasberakhir">Ibu sudah Selesai Masa Nifas</string>
    <string name="title_activity_transportasi_detail">TransportasiDetailActivity</string>
    <string name="penolong_persalinan">Penolong Persalinan</string>
    <string name="tempat_bersalin">Tempat Persalinan</string>
    <string name="pendamping">Pendamping Persalinan</string>
    <string name="ortu">Orang Tua</string>
    <string name="saudara">Saudara</string>
    <string name="anggota_keluarga">Anggota Keluarga</string>
    <string name="tetangga">Tetangga</string>
    <string name="ibu">Ibu</string>
    <string name="ayah">Ayah</string>
    <string name="calon_pendonor">Calon Pendonor</string>
    <string name="transportasipemilik">Transportasi (Pemilik Kendaraan)</string>
    <string name="hub_pemilik">Hubungan Pemilik Transportasi dengan ibu</string>
    <string name="hub_pendonor">Hubungan Pendonor dengan ibu</string>
    <string name="title_activity_bank_darah_detail">BankDarahDetailActivity</string>
    <string name="tutup">Apakah Anda ingin mengeluarkan ibu dari aplikasi?</string>
    <string name="tutup2">Apakah Anda ingin mengeluarkan data dari aplikasi?</string>
    <string name="alasan">Alasan Penutupan</string>
    <string name="faktor_resiko">Faktor Resiko</string>
    <string name="terakhirdonor">Tanggal Terakhir Donor</string>
    <string name="title_add_kader">Tambah Kader</string>
    <string name="search">Search</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="komplikasi">Komplikasi Ibu</string>
    <string name="jumlah_bayi">Jumlah Bayi</string>
    <string name="jenis_kel">Jenis Kelamin</string>
    <string name="komplikasi_bayi">komplikasi bayi baru lahir</string>
    <string name="mertua">Mertua</string>
    <string name="nohpibu">No Hp Ibu:</string>
    <string name="kek">KEK</string>
    <string name="anemia">Anemia</string>
    <string name="terlalu_muda">Terlalu Muda</string>
    <string name="terlalu_tua">Terlalu Tua</string>
    <string name="gravida_banyak">Gravida Banyak</string>
    <string name="dokter">dokter</string>
    <string name="bidan">bidan</string>
    <string name="dukun">dukun</string>
    <string name="rumah_sakit">rumahsakit</string>
    <string name="puskesmas">puskesmas</string>
    <string name="polindes">polindes</string>
    <string name="rumah">rumah</string>
    <string name="loggedin">loggedin</string>
    <string name="sync_alarm">sync_alarm</string>

</resources>
