<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.nativeform.FormAddIbuActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/add_transportasi"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/transportasi_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Form Transportasi"
                android:textAlignment="center"
                android:layout_marginBottom="50dp"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp"
                android:textStyle="bold" />

            <include
                layout="@layout/divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/nama_pemilik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_pemilik"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <include
                layout="@layout/divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/nohp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nohp"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
       <include
       layout="@layout/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/jenis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jenis_kenda"
                    android:maxLines="1"
                    android:singleLine="true" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/mobil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Mobil"
                        android:onClick="onRadioButtonClicked" />
                    <RadioButton
                        android:id="@+id/motor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/motor"
                        android:onClick="onRadioButtonClicked" />
                    <RadioButton
                        android:id="@+id/cidomo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cidomo"
                        android:onClick="onRadioButtonClicked" />
                    <RadioButton
                        android:id="@+id/pickup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pickup"
                        android:onClick="onRadioButtonClicked" />
                    <RadioButton
                        android:id="@+id/id_lainnya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lainnya"
                        android:onClick="onRadioButtonClicked" />

                </RadioGroup>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:id="@+id/kapasitas_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/kapasitas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kapasitass"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        <include
        layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/dusun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Dusun"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/gubug"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gubug"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/profesi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profesi_tesxt"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/ket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Kete"
                        android:inputType="textMultiLine"
                        android:maxLines="4"
                        android:lines="4"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <Button
                android:id="@+id/saved"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Simpan"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>