<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.FormAddIbuActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/add_ibu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Form Tambah Ibu"
                android:textAlignment="center"
                android:layout_marginBottom="50dp"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp"
                android:textStyle="bold" />

            <include
                layout="@layout/divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/mother_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mother_names"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

       <include
       layout="@layout/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <AutoCompleteTextView
                    android:id="@+id/husband_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/husband_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <include
        layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/gubug"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gubug"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/hpht"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hpht"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/htp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/htp"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/goldarah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gol_darah"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/status"
                        android:maxLines="1"
                        android:singleLine="true" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/hidup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Hidup"
                            android:onClick="onRadioButtonClicked" />
                        <RadioButton
                            android:id="@+id/meinggal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/meinggal"
                            android:onClick="onRadioButtonClicked" />

                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/hamil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hamil"
                        android:onClick="onRadioButtonClicked"/>=
                    <RadioButton
                        android:id="@+id/nifas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nifas"
                        android:onClick="onRadioButtonClicked" />
                    <RadioButton
                        android:id="@+id/risti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/risti"
                        android:onClick="onRadioButtonClicked" />
                    </RadioGroup>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/kader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kader"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <include
                layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/notelpon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notelp"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Button
                android:id="@+id/saved"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Simpan"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>